@@ -2,6 +2,7 @@
 
 #include <edelib/MenuItem.h>
 #include <edelib/MenuBar.h>
+#include <edelib/MenuButton.h>
 #include <edelib/Window.h>
 #include <edelib/IconLoader.h>
 
@@ -9,7 +10,7 @@ edelib::MenuItem menu_[] = {
  {"&File", 0,  0, 0, 64, FL_NORMAL_LABEL, 0, 12, 0},
  {"F&irst item", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
  {"S&econd item", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
- {"Third item", 0,  0, 0, 128, FL_NORMAL_LABEL, 0, 12, 0},
+ {"Third item ithodasd asdasd asd asdasd asd asdas asdasdasd asdasdsad dasdas asdasdasd", 0,  0, 0, 128, FL_NORMAL_LABEL, 0, 12, 0},
  {"Submenu", 0,  0, 0, 64, FL_NORMAL_LABEL, 0, 12, 0},
  {"&Item 1", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
  {"I&tem 2", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
@@ -21,6 +22,14 @@ edelib::MenuItem menu_[] = {
  {0,0,0,0,0,0,0,0,0},
  {0,0,0,0,0,0,0,0,0}
 };
+
+edelib::MenuItem menu_menu[] = {
+ {"Some long item without meaning", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
+ {"Item 2", 0,  0, 0, 2, FL_NORMAL_LABEL, 0, 12, 0},
+ {"Even longer menu item used only for testing aaaa ffff", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 12, 0},
+ {0,0,0,0,0,0,0,0,0}
+};
+
 
 int main(int argc, char **argv) {
 	edelib::Window * win = new edelib::Window(215, 144);
@@ -35,6 +44,12 @@ int main(int argc, char **argv) {
 		menu_[1].image(img1);
 		menu_[2].image(img2);
 		menu_[8].image(img3);
+
+		edelib::MenuButton* b = new edelib::MenuButton(65, 80, 90, 25, "menu");
+		b->menu(menu_menu);
+
+		Fl_Image* img4 = (Fl_Image*)edelib::IconLoader::get("folder", edelib::ICON_SIZE_TINY);
+		menu_menu[0].image(img4);
 	win->end();
 	win->show(argc, argv);
 	return Fl::run();
